Version 1.0.8 (not yet released):
- Provide a hstrerror() function for systems that lack getaddrinfo(), so that
  gethostbyname() must be used instead, and do not provide hstrerror()
  themselves. Needed for Solaris 2.6. Reported and tested by Chris Green.

Version 1.0.7:
- Add a workaround for the Comcast.net POP3 server: allow more than one space
  before the UID in an UIDL response, even though RFC 1939 says it must be
  exactly one. Reported and fixed by Benji Fisher.

Version 1.0.6:
- Updated copyright info to 2007.
- Added an "auto" setting for pipelining and made it the default. "on" and
  "off" now force pipelining on or off regardless of server capabilities.
  Thanks to Jeremy C. Reed for suggestions on this.
- Gnulib update to 2007-01-10.
- Switch to autoconf-2.61 and automake-1.10, to avoid problems with configure
  trying to run "sh /usr/bin/install" where /usr/bin/install is not a shell
  script on NetBSD. Reported by Jeremy C. Reed.
- Put the POP3_PIPELINE_MIN and POP3_PIPELINE_MAX definitions into #ifndef ...
  #endif so that they can easily be set via CFLAGS. Thanks to Jeremy C. Reed
  for the patch.
- Remove the obsolete "extern int errno;" declaration. It does not conform to
  POSIX and causes trouble. Thanks to Jeremy C. Reed for the patch.
- Added AC_SYS_LARGEFILE to configure.ac, for large file support. Removed the
  unnecessary AC_C_CONST and AC_HEADER_STDC.

Version 1.0.5:
- Remove gnulib module nanosleep. This fixes more build problems.

Version 1.0.4:
- Gnulib update. Remove the gettimeofday module. There are no local changes
  to the gnulib code anymore.
- Do not use the gnulib gettimeofday module anymore. Use a local replacement
  in delivery.c instead.
- Do not use nanosleep() on W32 anymore. Use Sleep() instead.
  Do not use nanosleep() on DJGPP anymore. Use usleep() instead.
- Update gettext files to gettext-0.16.
- Improved the configure check for the OpenSSL libraries. This fixes a build